Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-07-31
----------
- Reorganized the lua files.  Also, updated the Vanilla's spell code -
  it looks much nicer.  Added the basics of class/race powers.
  Moved debugging stuff into lib/script/debug/.  (takkaria)

2002-07-29
----------
- Added support for ABSORB_LIGHT, using linked lists to avoid the calls for
  ang_sort. They uses about 12K of additional memory... (pelpel)
- Changed all occurences of 'lite' to 'light' in object.lua. (pelpel)
- Altered the standard makefile to allow other compilers to be
  intergrated into it more easily. (takkaria)
- Got all (non-lua) code compiling with TCC 0.9.8 - 0.9.9 segfaults on
  randart.c, but 0.9.8 has parsing problems with the lua header files.
  Hopefully 1.0.0 will compile Angband completely cleanly. (takkaria)
- Made the running code take notice of terrain flags.  This should
  prevent some problems. (takkaria)
- Removed the silly compiler warnings from the borg sources. (takkaria)
- Added '-x' as a command-line option; it printf()s savefile loading
  messages for assisting debugging. (takkaria)
- Setting reload_dungeon to TRUE in save.c will prompt the user about
  regenerating the dungeon that they're on at the end of the loading
  process. (takkaria)
- Added "meta-versions" to the object and monster parsing functions.
  If the monster meta-version isn't equal to the one found in the
  savefile, it sets reload_dungeon. (see above)
  Also, object.txt and monster.txt now have the "M" field for specifying
  this. (takkaria)

2002-07-28
----------
- generate_cave() didn't clear the cave_info2 array, causing various weird
  effects. (pelpel)
- Broken doors don't count for the purpose of easy open/close, because the
  game offers ways to tell them from open doors, and I feel it's mildly
  annoying to be asked to choose them only to get the responce telling me
  I can't do so. (pelpel)

2002-07-27
----------